@@ -47,6 +47,13 @@ class KeyFieldHelper {
     int endChar = 0;
     boolean numeric;
     boolean reverse;
+    @Override
+    public String toString() {
+      return "-k" 
+             + beginFieldIdx + "." + beginChar + "," 
+             + endFieldIdx + "." + endChar 
+             + (numeric ? "n" : "") + (reverse ? "r" : "");
+    }
   }
   
   private List<KeyDescription> allKeySpecs = new ArrayList<KeyDescription>();
@@ -130,7 +137,7 @@ class KeyFieldHelper {
     if (k.endFieldIdx == 0) {
       //there is no end field specified for this keyspec. So the remaining
       //part of the key is considered in its entirety.
-      return end; 
+      return end - 1; 
     }
     if (lengthIndices[0] >= k.endFieldIdx) {
       int position = 0;
@@ -144,9 +151,9 @@ class KeyFieldHelper {
       if (position + k.endChar <= (end - start)) {
         return start + position + k.endChar - 1;
       }
-      return end;
+      return end - 1;
     }
-    return end;
+    return end - 1;
   }
   public void parseOption(String option) {
     if (option == null || option.equals("")) {
